# ester-lol

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  manage.py  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy-to-fly.yml
backend/: pyproject.toml
esterlol/: urls.py  wsgi.py
esterlol/api/: apps.py  query.py  schema.py  types.py  unions.py  utils.py
esterlol/api/types/: __init__.py  _base.py  blocks.py  image.py  inlines.py  pages.py  settings.py  snippets.py
esterlol/home/: apps.py  blocks.py  models.py
esterlol/home/migrations/: 0003_homepage_body.py  0003_homepage_cta_homepage_image_homepage_introduction_and_more.py  0004_alter_homepage_image.py
esterlol/images/: apps.py  models.py
esterlol/resume/: apps.py
esterlol/search/: apps.py  views.py
esterlol/settings/: base.py  dev.py  local.py  production.py
esterlol/site_settings/: apps.py  models.py
esterlol/users/: admin.py  apps.py  models.py
frontend/: .eslintrc.json  .prettierrc  README.md  codegen-plugin.ts  codegen.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.plugin.json  types.generated.ts
frontend/app/: globals.css  home-page.generated.ts  home-page.graphql  layout.tsx  page.tsx
frontend/components/: experience.tsx  footer.tsx  heading.tsx  icons.tsx  link.tsx  logo.tsx  skills.tsx  styled-text.tsx
frontend/fragments/: activity.graphql  education.graphql  home-page.graphql  image.graphql
frontend/lib/: client.ts  utils.ts
(+26 files in other folders)
